--- a/views/index.hbs
+++ b/views/index.hbs
@@ -77,8 +77,8 @@
             </div>
 
             <div class="links">
-                <a href="https://laravel.com/docs">Documentation</a>
-                <a href="https://github.com/laravel/laravel">GitHub</a>
+                <!-- <a href="">Documentation</a> -->
+                <a href="https://github.com/sleighjs/sleigh-framework">GitHub</a>
             </div>
         </div>
     </div>
